# odoo-imgs

./: .env.example  .gitignore  CONVENTIONS.md  MIGRATION.md  README.md  README.md (partial update)  __manifest__.py  developer_mode.md  docker-compose.yml  docker_check_module.sh  dokploy.yml  odoo-tools  pyproject.toml  requirements.txt  setup_dev.sh  troubleshooting.md
config/: odoo.conf
docker/: Dockerfile
models/: __init__.py  export_extension.py  product.py
scripts/: .fix_icon_isuues.sh  check_module_images.sh  debug_module.sh  docker_dev.sh  find_name_inconsistencies.sh  fix_icon.sh  fix_icon_paths.sh  fix_login.sh  force_update_module.py  generate_images.py  make_executable.sh  rename_module.sh  resize.sh  resize_images.py  setup_scripts.sh  setup_ssl.sh  test_public_images.sh  verify_icon.py
security/: ir.model.access.csv
src/: main.py
static/description/: README.txt  icon.png.bak
tests/: __init__.py  test_main.py  test_product.py
traefik/: traefik.toml
views/: product_export_settings.xml
